--- a/styles/media.css
+++ b/styles/media.css
@@ -1,84 +1,114 @@
-@media screen and (max-width: 1440px) {
-    .collection-example-content .card {
-        max-width: 200px;
-        height: 300px;
+@media screen and (max-width: 2400px){
+    .ofline,.header-link_copy {
+        display: none;
+        
     }
+@media screen and (max-width: 1400px)
+{
+    .collection-example {
+        height: 660px;}
+    .collection-example h5 {
+        margin: 50px 0 50px 0;}
+    .collection_new {
+        min-height: 660px;}
+    .collection-wrapper{
+    min-height: 660px;}
+    
+    }
+    
 
-    .collection-example-content .card-block {
-        height: auto;
-        padding: 40px 17px;
-    }
+
+
+@media screen and (max-width: 1275px){
+.card-title {
+        font-size: 14px;}
+    .card-price {
+        font-size: 14px;}
 }
 
+
+
+
+
 @media screen and (max-width: 1130px) {
-    .collection-example-content .card {
-        max-width: 160px;
-        height: 250px;
+    
+        .ofline {
+        display: block;
+            max-width: 1000px;
     }
 
-    .collection-example-content .card-block {
-        padding: 25px 12px;
-    }
+.collection-example {
+        height: 550px;}
+    .collection-example h5 {
+        margin: 30px 0 30px 0;}
+    .collection-wrapper{
+    min-height: 550px;}
+  
 
-    .collection-wrapper {
-        min-height: 600px;
-    }
-
-    .collection-example {
-        min-height: 600px;
-    }
+  
 
     .collection_new {
-        min-height: 600px;
+        min-height: 550px;
         justify-content: center;
     }
 
     .collection_new-button {
         margin: 0;
     }
-    
-    
+
 
     .card-wrapper h5 {
-    margin:  60px 0 30px 0;
+        margin: 60px 0 30px 0;
     }
-.   card-wrapper hr{
-    margin: 0 0 30px 0;}
-    .card-block {
-    height: 255px; }
-    .card-block-img {
-    width: 80%;
-    }
-    .card_container {
-    max-width: 1100px;
-    margin: 0 0 100px;
-     
-    }
-    .card-wrapper hr {
-     margin: 0 0 30px 0;
-     }
-    .footer {
-    min-height: 350px;
-    }
-    .style {
-    padding-top: 0px;
-    max-width: 800px;
-    }
-    .magazine {
-    width: 300px;
-    }
-    .block {
-    width: 130px;
-    height: 35px;
-    }
-    .brand {
-    width: 220px;
-    }
-    .box {
-    padding: 8px 10px;}
-    .exit {
-        max-width: 900px;}
 
+    . card-wrapper hr {
+        margin: 0 0 30px 0;
+    }
+
+   
+
+    .card_container {
+        display: none;
+    }
+
+    .card-wrapper hr {
+        margin: 0 0 30px 0;
+    }
+
+    footer {
+        min-height: 350px;
+    }
+
+    .footer-content {
+        padding-top: 0;
+        max-width: 800px;
+    }
+
+    .magazine {
+        width: 300px;
+    }
+
+    .block {
+        width: 130px;
+        height: 35px;
+    }
+
+    .brand {
+        width: 220px;
+    }
+
+    .box {
+        padding: 8px 10px;
+    }
+   
+       .style {
+        margin: 5px;}
+    .card-title {
+        font-size: 14px;}
+    .card-price {
+        font-size: 14px;}
+
+    
 }
 
 
@@ -88,10 +118,11 @@
         flex-flow: column nowrap;
     }
 
-    .collection-example-content .card {
-        max-width: 200px;
-        height: 350px;
+    .card-wrapper {
+        min-height: unset;
+        flex-flow: column nowrap;
     }
+
 
     .collection-example {
         min-height: unset;
@@ -150,71 +181,103 @@
     .brands-list {
         flex-flow: row wrap;
     }
+
     .brands-list {
-    align-items: center;
-    justify-content: center;
+        align-items: center;
+        justify-content: center;
     }
+
     .brands-list {
-    height: auto; 
+        height: auto;
     }
-    .style {
-    padding-top: 0px;
-    max-width: 570px;
-        
+
+    .footer-content {
+        padding-top: 0;
+        max-width: 570px;
+
     }
-    .footer {
-    min-height: 250px;
+
+    footer {
+        min-height: 250px;
     }
+
     .magazine h5 {
-    font-size: 20px;
-    line-height: 3px;}
+        font-size: 20px;
+        line-height: 3px;
+    }
+
     .magazine p {
-    font-size: 11px
+        font-size: 11px
     }
+
     .tag {
-    display: flex;
-    gap: 11px;}
+        display: flex;
+        gap: 11px;
+    }
+
     .box {
-    padding: 4px 5px;
-    font-size: 14px;
+        padding: 4px 5px;
+        font-size: 14px;
     }
+
     .block {
-    width: 190px;
-    height: 28px;
-    }
-    .exit {
-    max-width: 570px;
+        width: 190px;
+        height: 28px;
     }
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
+   * header {
+        position: fixed;
+        z-index: 10;
+    }
     .header-caption-wrapper,
-    .header-link{
+    .header-link {
         display: none;
     }
-    .hero-block {
-    width: 220px;
-    height: 220px;
-    }
-    .hero-block-img {
-    width: 155px;
-    }
-    .hero-block h5 {
-    font-size: 18px;}
 
-.hero-text {
-    font-size: 13px;
-}
-    .footer {
-    background: url(../assets/bg-footer.png) center;
-    background-size: auto;
-}
-}
-@media screen and (max-width: 625px) {
-    .collection-example-content .card {
-        max-width: 150px;
-        height: 300px;
+    .hamburger-trigger {
+        display: flex;
     }
+
+    .hero-block {
+        width: 220px;
+        height: 220px;
+    }
+
+    .hero-block-img {
+        width: 155px;
+    }
+
+    .hero-block h5 {
+        font-size: 18px;
+    }
+
+    .hero-text {
+        font-size: 13px;
+    }
+
+    footer {
+        background: url(../assets/bg-footer.png) center;
+        background-size: auto;
+        padding: 0 20px;
+    }
+
+    .footer-content {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .magazine:nth-child(2) {
+        margin: 0 20px;
+    }
+    
+}
+
+@media screen and (max-width: 625px) {
+  
+
+   
 
     .collection_new {
         min-height: 330px;
@@ -224,69 +287,90 @@
         padding-bottom: 330px;
         background-size: 100% 330px;
     }
-    .menu__btn{
-        left:85%;
+
+    .menu__btn {
+        left: 85%;
     }
-    .style {
-              flex-direction: column; 
+
+    .footer-content {
+        flex-direction: column;
         display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+        flex-flow: column nowrap;
     }
+
     .magazine {
-        height: 180px;}
+        height: 180px;
+    }
+
     .magazine h5 {
-        text-align: center;}
+        text-align: center;
+    }
+
     .tag {
-        justify-content: space-around;}
+        justify-content: space-around;
+    }
 
-} 
-
-@media screen and (max-width: 488px){
-    .collection_old-content h5 {
-   font-size: 30px;
-   }
-    .collection_old-content p {
- font-size: 12px;
- margin: 0 6px 0;}
-    .collection_old-button {
-    padding: 10px 20px;
-    font-size: 14px;
-    margin: 30px 0 20px;}
-    .card-wrapper h5 {
-    margin: 25px 0 30px 0;
-    font-size: 30px;
 }
+
+@media screen and (max-width: 488px) {
+    .collection_old-content h5 {
+        font-size: 30px;
+    }
+
+    .collection_old-content p {
+        font-size: 12px;
+        margin: 0 6px 0;
+    }
+
+    .collection_old-button {
+        padding: 10px 20px;
+        font-size: 14px;
+        margin: 30px 0 20px;
+    }
+
+    .card-wrapper h5 {
+        margin: 25px 0 30px 0;
+        font-size: 30px;
+    }
+
     .brands h5 {
-   margin: 25px ;
-        font-size: 30px;}
+        margin: 25px;
+        font-size: 30px;
+    }
+
     .brands hr {
         width: 100px;
-    margin: 0 0 20px 0;}
-    .exit {
-    max-width: 310px;
-}
-}
-
-
-@media screen and (max-width: 398px){
-.collection_new {
-    min-height: 250px;}
-    .collection_new h5 {
-    font-size: 30px;
+        margin: 0 0 20px 0;
     }
-.collection_new hr {
-    width: 120px;}
+}
 
-.collection_new-button {
-     font-size: 15px;}
+
+@media screen and (max-width: 398px) {
+    .collection_new {
+        min-height: 250px;
+    }
+
+    .collection_new h5 {
+        font-size: 30px;
+    }
+
+    .collection_new hr {
+        width: 120px;
+    }
+
+    .collection_new-button {
+        font-size: 15px;
+    }
 
 }
 
 
-@media only screen and (min-width: 769px) and (max-width: 1920px){
-.hamburger-menu {
-    display: none;
-}
+@media only screen and (min-width: 769px) and (max-width: 1920px) {
+    .hamburger-menu {
+        display: none;
+    }
+
+
 }
