--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     /* IE and Edge */
     scrollbar-width: none;
     box-sizing: border-box;
-    
+
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -67,8 +67,7 @@ header {
     width: 100%;
     height: auto;
     background: var(--bg-grey-dark);
-    
-
+    position: relative;
 }
 
 .header {
@@ -182,8 +181,10 @@ main {
 
 .collection-example {
     width: 55%;
-    min-height: 730px;
+    height: 730px;
     background: var(--color-black);
+        min-height: unset;
+    
 }
 
 .collection-example h5 {
@@ -204,7 +205,7 @@ main {
 }
 
 .collection-example-content {
-   margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
     position: relative;
     overflow: hidden;
@@ -214,13 +215,14 @@ main {
 }
 
 .card {
-  
+
     max-width: 260px;
     width: 100%;
     height: 405px;
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
+    margin: 0 auto;
 }
 
 .card-block {
@@ -229,7 +231,7 @@ main {
     padding: 55px 22px;
     display: flex;
     justify-content: center;
-    align-items: center;
+
     flex-flow: column nowrap;
     background-color: var(--bg-grey);
 }
@@ -375,11 +377,13 @@ main {
 
 .card-wrapper {
     width: 100%;
-    display: flex;
+      display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column nowrap;
-    background: var(--color-black)
+    background: var(--color-black);
+
+
 }
 
 .card-wrapper h5 {
@@ -400,7 +404,7 @@ main {
 }
 
 .card_container {
-   display: flex;
+    display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     max-width: 1150px;
@@ -451,14 +455,14 @@ main {
     padding: 0 30px
 }
 
-.footer {
+footer {
     min-height: 400px;
     background: url(../assets/bg-footer.png) no-repeat;
     background-size: 100% 100%;
 }
 
 
-.style {
+.footer-content {
     margin: 0 auto;
     padding-top: 40px;
     max-width: 1109px;
@@ -529,21 +533,14 @@ main {
     padding-left: 1rem;
 }
 
-.end {
+.copyright-wrapper {
     width: 100%;
     height: 50px;
     background: var(--color-black);
 }
 
-.exit {
-    width: 100%;
-    max-width: 1110px;
-    margin: 0 auto;
-}
-
-.exit_footer {
-
-    width: 100%;
+.copyrigh {
+   width: 100%;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -551,99 +548,55 @@ main {
     height: 50px;
 }
 
-.exit_foond {
-
+.copyright-cell {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: var(--color-grey);
+    height: 100%;
 }
 
-.swiper-container {
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    padding: 0;
-    z-index: 1;}
+
+
 .slider {
-    margin: 0 auto;
+    margin: 38px;
     max-width: 1450px;
 }
-.collection-example-content {
-    touch-action: pan-y;
-}
-swiper-wrapper {
-    
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    transition-property: transform;
-    box-sizing: content-box;
-    padding: 0 170px;
-    width: 800px;
-}
 
-.swiper-slide {
-    flex-shrink: 0;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition-property: transform;
-    
-    }
 
-/* скрываем чекбокс */
-#menu__toggle {
-  opacity: 0;
-}
-/* стилизуем кнопку */
-.menu__btn {
-  display: flex; /* используем flex для центрирования содержимого */
-  align-items: center;  /* центрируем содержимое кнопки */
-  position: fixed;
-  left: 95%;
-  width: 26px;
-  height: 26px;
-  cursor: pointer;
-  z-index: 1;
-}
-/* добавляем "гамбургер" */
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #616161;
-}
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 8px;
-}
-/* контейнер меню */
-.menu__box {
-  display: block;
-    position: fixed;
-    visibility: hidden;
+.hamburger-list {
+    display: block;
     width: 100%;
-    height: 45%;
-    margin: 35px 0;
+    margin: 0;
     padding: 0;
     list-style: none;
     text-align: center;
     background: var(--bg-grey-dark);
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    box-shadow: 1px 0 6px rgba(0, 0, 0, .2);
+    position: absolute;
+    top: -60vh;
+    right: 0;
+    transition: all 0.4s linear;
 }
-/* элементы меню */
-.menu__item {
-  display: block;
-  padding: 12px 24px;
- font-style: normal;
+
+.hamburger-list p {
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: var(--color-grey);
+    text-decoration: none;
+}
+
+.hamburger__item {
+    display: block;
+    padding: 12px 24px;
+    font-style: normal;
     font-size: 14px;
     line-height: 18px;
     text-transform: uppercase;
@@ -652,48 +605,102 @@ swiper-wrapper {
     transition: all 0.3s;
     font-weight: 400;
 }
-.menu__item:hover {
-  background-color: #CFD8DC;
-}
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-  visibility: visible;
-  left: 0;
+
+.hamburger__item img {
+    width: 22px;
+    height: 22px;
 }
 
-.hamburger-menu{
-width: 100%;
-    height: 60px;
-  background: var(--bg-grey-dark);
-    
+.hamburger-list.visible {
+    top: 80px;
 }
-.menu__item img {
-    width: 22px;
-    height: 22px;}
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  transition-duration: .25s;
+
+.hamburger-trigger {
+    display: none;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+    outline: none;
+    box-shadow: none;
+    border: transparent;
+    background: transparent;
+    padding: 0;
+    transition-duration: .25s;
 }
-.menu__box {
-  transition-duration: .25s;
+
+.hamburger-trigger span,
+.hamburger-trigger span::before,
+.hamburger-trigger span::after {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: .25s;
 }
-.menu__item {
-  transition-duration: .25s;
+
+.hamburger-trigger span::before {
+    content: '';
+    top: -8px;
+    position: absolute;
 }
-.menu__box p {
- font-size: 14px;
+
+.hamburger-trigger span::after {
+    content: '';
+    top: 8px;
+    position: absolute;
+}
+
+.hamburger-trigger.checked span {
+    transform: rotate(45deg);
+}
+
+.hamburger-trigger.checked span::before {
+    top: 0;
+    transform: rotate(0);
+}
+
+.hamburger-trigger.checked span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+.ofline {
+
+     
+    max-width: 1450px;
+}
+.header-link_copy {
+    height: 100%;
+    padding: 0 2%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row nowrap;
+    background: inherit;
+    font-style: normal;
+    font-size: 14px;
     line-height: 18px;
     text-transform: uppercase;
     color: var(--color-grey);
-    text-decoration: none;}
+    text-decoration: none;
+    transition: all 0.3s;
+    font-weight: 400;
+}
+
+.header-link_copy img {
+    width: 22px;
+    height: 22px;}
+.copyright {
+    width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.copyrigt-wrap {
+width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
+}
